--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   smooth_page_indicator: ^1.1.0
   get_storage: ^2.1.1
+  animate_do: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -61,10 +62,15 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # To add assets to your application, add an assets section, like this
+  assets:
+    - assets/logo/
+    - assets/onboarding/
+    # - assets/iconosmenu/
+    # - assets/iconoscategories/
+    # - assets/iconosadicionables/
+    # - assets/web/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
