--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ flutter:
     - assets/logo/
     - assets/onboarding/
     - assets/menu_icons/
-    # - assets/iconoscategories/
+    - assets/categories/
     - assets/informative/
     - assets/web/
     - assets/
