--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_storage: ^2.1.1
   animate_do: ^3.1.2
   persistent_bottom_nav_bar: ^5.0.2
+  http: ^1.1.2
 
 
 dev_dependencies:
