--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   animate_do: ^3.1.2
   persistent_bottom_nav_bar: ^5.0.2
   http: ^1.1.2
+  loading_animation_widget: ^1.2.0+4
 
 
 dev_dependencies:
