--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   http: ^1.1.2
   loading_animation_widget: ^1.2.0+4
+  intl: ^0.19.0
+  rflutter_alert: ^2.0.7
 
 
 dev_dependencies:
