--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   intl: ^0.19.0
   rflutter_alert: ^2.0.7
+  url_launcher: ^6.2.3
 
 
 dev_dependencies:
